# gstreamer-sdk__py2cairo

./: configure.ac
src/: Makefile.am
